--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_weather">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.rainstick.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_weather"
+        android:name="com.example.rainstick.ui.home_weather.Weather"
+        android:label="@string/menu_weather"
+        tools:layout="@layout/fragment_weather" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.rainstick.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_settings"
+        android:name="com.example.rainstick.ui.settings.RainStickSettings"
+        android:label="@string/menu_settings"
+        tools:layout="@layout/fragment_settings" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.rainstick.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_about"
+        android:name="com.example.rainstick.ui.about.RainStickAbout"
+        android:label="@string/menu_about"
+        tools:layout="@layout/fragment_about" />
 </navigation>
